Add archival of github starred repos and docs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "scripts": {
     "build": "tsc --noEmit && ncc build src/start.ts -o build -m",
+    "dev": "tsx --watch src/start.ts",
+    "start": "tsx src/start.ts",
     "lint": "eslint \"**/*.{ts,tsx}\" --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier . --write",
@@ -23,6 +25,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "node-cron": "^3.0.3",
     "winston": "^3.12.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
@@ -30,6 +34,7 @@
   "devDependencies": {
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vercel/ncc": "^0.38.1",
