--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "dependency-update": "npm-check-updates -u --filterVersion \"/^[~^<>]| - |\\.x$/\" --deep && pnpm install",
+    "generate-schema": "tsx scripts/generate-jobs-schema.ts",
+    "test": "vitest",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -26,9 +28,11 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "nock": "14.0.0-beta.5",
     "node-cron": "^3.0.3",
     "winston": "^3.12.0",
     "winston-daily-rotate-file": "^5.0.0",
+    "yaml": "^2.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -47,6 +51,9 @@
     "prettier": "^3.2.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
+    "vitest": "^1.3.1",
+    "vitest-mock-extended": "^1.3.1",
+    "zod-to-json-schema": "^3.22.4",
     "zx": "^7.2.3"
   }
 }
