--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "*.{ts,json,yml,yaml,html,md}": "prettier --write"
   },
   "engines": {
-    "node": "20",
-    "pnpm": "8"
+    "node": "22"
   },
+  "packageManager": "pnpm@10.13.1",
   "keywords": [],
   "author": "",
   "license": "MIT",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
+    "@types/node": "22",
     "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
