--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/pnpm-install
-      - run: pnpm format:check
-      - run: pnpm lint
+      - run: pnpm check
       - run: pnpm build
       - run: pnpm test
