--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "src/*.ts": "eslint --cache --fix",
     "*.{ts,json,yml,yaml,html,md}": "prettier --write"
   },
-  "engines": {
-    "node": "20",
-    "pnpm": "8"
-  },
   "keywords": [],
   "author": "",
   "license": "MIT",
@@ -36,8 +32,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
+    "@biomejs/biome": "^2.1.3",
+    "@types/node": "^22",
     "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
