--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "build": "tsc --noEmit && ncc build src/start.ts -o build -m",
     "dev": "tsx --watch src/start.ts",
     "start": "tsx src/start.ts",
-    "lint": "eslint \"**/*.{ts,tsx}\" --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "format": "prettier . --write",
-    "format:check": "prettier . --check",
+    "check": "biome check",
+    "check:fix": "biome check --write --unsafe --no-errors-on-unmatched",
     "dependency-update": "npm-check-updates -u --filterVersion \"/^[~^<>]| - |\\.x$/\" --deep && pnpm install",
     "generate-schema": "tsx scripts/generate-jobs-schema.ts",
     "test": "vitest",
     "prepare": "husky"
   },
   "lint-staged": {
-    "src/*.ts": "eslint --cache --fix",
-    "*.{ts,json,yml,yaml,html,md}": "prettier --write"
+    "*": [
+      "biome check --no-errors-on-unmatched --files-ignore-unknown=true"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -35,12 +34,7 @@
     "@biomejs/biome": "^2.1.3",
     "@types/node": "^22",
     "@types/node-cron": "^3.0.11",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.2",
-    "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "npm-check-updates": "^16.14.15",
