--- a/package.json
+++ b/package.json
@@ -6,54 +6,45 @@
     "build": "tsc --noEmit && ncc build src/start.ts -o build -m",
     "dev": "tsx --watch src/start.ts",
     "start": "tsx src/start.ts",
-    "lint": "eslint \"**/*.{ts,tsx}\" --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "format": "prettier . --write",
-    "format:check": "prettier . --check",
+    "check": "biome check",
+    "check:fix": "biome check --write --unsafe --no-errors-on-unmatched",
     "dependency-update": "npm-check-updates -u --filterVersion \"/^[~^<>]| - |\\.x$/\" --deep && pnpm install",
     "generate-schema": "tsx scripts/generate-jobs-schema.ts",
     "test": "vitest",
     "prepare": "husky"
   },
   "lint-staged": {
-    "src/*.ts": "eslint --cache --fix",
-    "*.{ts,json,yml,yaml,html,md}": "prettier --write"
-  },
-  "engines": {
-    "node": "20",
-    "pnpm": "8"
+    "*": [
+      "biome check --no-errors-on-unmatched --files-ignore-unknown=true"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^17.2.1",
     "nock": "14.0.0-beta.5",
-    "node-cron": "^3.0.3",
-    "winston": "^3.12.0",
+    "node-cron": "^4.2.1",
+    "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "yaml": "^2.4.0",
-    "zod": "^3.22.4"
+    "yaml": "^2.8.0",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
+    "@biomejs/biome": "^2.1.3",
+    "@types/node": "^22",
     "@types/node-cron": "^3.0.11",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.2",
-    "eslint-plugin-unused-imports": "^3.1.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "npm-check-updates": "^16.14.15",
-    "prettier": "^3.2.5",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
-    "vitest": "^1.3.1",
-    "vitest-mock-extended": "^1.3.1",
-    "zod-to-json-schema": "^3.22.4",
-    "zx": "^7.2.3"
-  }
+    "@vercel/ncc": "^0.38.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "npm-check-updates": "^18.0.2",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4",
+    "vitest-mock-extended": "^3.1.0",
+    "zod-to-json-schema": "^3.24.6",
+    "zx": "^8.7.2"
+  },
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
